# PandaGen

./: .gitignore  AGENTS.md  Cargo.toml  INCREMENTAL_RENDERING.md  MANUAL_TEST_EDITOR.md  PHASE100_SUMMARY.md  PHASE101_SUMMARY.md  PHASE102_SUMMARY.md  PHASE103_SUMMARY.md  PHASE104_SUMMARY.md  PHASE105_SUMMARY.md  PHASE106_SUMMARY.md  PHASE107_SUMMARY.md  PHASE108_SUMMARY.md  PHASE109_SUMMARY.md  PHASE110_SUMMARY.md  PHASE111_SUMMARY.md  PHASE112_SUMMARY.md  PHASE113_SUMMARY.md  PHASE114_SUMMARY.md  PHASE115_SUMMARY.md  PHASE116_SUMMARY.md  PHASE117_SUMMARY.md  PHASE118_SUMMARY.md  PHASE119_SUMMARY.md  PHASE120_SUMMARY.md  PHASE121_SUMMARY.md  PHASE122_SUMMARY.md  PHASE123_SUMMARY.md  PHASE124_SUMMARY.md  PHASE125_SUMMARY.md  PHASE126_SUMMARY.md  PHASE127_SUMMARY.md  PHASE128_SUMMARY.md  PHASE129_SUMMARY.md  PHASE130_SUMMARY.md  PHASE131_SUMMARY.md  PHASE132_SUMMARY.md  PHASE133_SUMMARY.md  PHASE134_SUMMARY.md  (+174 more)
.cargo/: config.toml
.github/workflows/: ci.yml
boot/: limine.cfg
cli_console/: Cargo.toml
cli_console/src/: commands.rs  interactive.rs  lib.rs
console_fb/: Cargo.toml
console_fb/src/: combined_view.rs  font.rs  lib.rs  scrollback.rs  styling.rs
console_vga/: Cargo.toml
console_vga/src/: lib.rs  scrollback.rs  selection.rs  themes.rs  tiling.rs
contract_tests/: Cargo.toml
contract_tests/src/: intent_router.rs  lib.rs  process_manager.rs  registry.rs  storage.rs
core_types/: Cargo.toml
core_types/src/: capability.rs  ids.rs  lib.rs  memory.rs  service_ids.rs  storage_schema.rs  uuid_tools.rs
developer_sdk/: Cargo.toml
developer_sdk/src/: lib.rs
distributed_storage/: Cargo.toml
distributed_storage/src/: consensus.rs  lib.rs
docs/: architecture.md  interfaces.md  next_steps.md  path_to_graphics.md  qemu_boot.md  system-image-layout.md
editor_core/: Cargo.toml
editor_core/src/: buffer.rs  command.rs  core.rs  key.rs  lib.rs  mode.rs  snapshot.rs
examples/: fs_demo.rs  settings_demo.rs
formal_verification/: Cargo.toml
formal_verification/src/: lib.rs
fs_view/: Cargo.toml
fs_view/src/: directory.rs  lib.rs  path.rs
graphics_rasterizer/: Cargo.toml
graphics_rasterizer/src/: lib.rs
hal/: Cargo.toml
hal/src/: block_device.rs  cpu.rs  framebuffer.rs  interrupts.rs  keyboard.rs  keyboard_translation.rs  lib.rs  memory.rs  timer.rs
hal_x86_64/: Cargo.toml
hal_x86_64/src/: idt.rs  interrupts.rs  keyboard.rs  lib.rs  (+6 more)
identity/: Cargo.toml
identity/src/: lib.rs
input_types/: Cargo.toml
intent_router/: Cargo.toml
ipc/: Cargo.toml
kernel_api/: Cargo.toml
kernel_bootstrap/: Cargo.toml  build.rs  linker.ld
kernel_bootstrap/src/: bare_metal_editor_io.rs  bare_metal_storage.rs  bare_metal_storage_tests.rs  display_sink.rs  font_data_8x16.in  framebuffer.rs  lib.rs  main.rs  minimal_editor.rs  minimal_editor_tests.rs  optimized_render.rs  output.rs  palette_overlay.rs  parity_tests.rs  render_stats.rs  vga.rs  workspace.rs  workspace_platform.rs
lifecycle/: Cargo.toml
package_registry/: Cargo.toml
pandagend/: Cargo.toml
pandagend/examples/: hello_editor.pgkeys  open_editor_and_quit.pgkeys
pandagend/src/: commands.rs  input_script.rs  lib.rs  main.rs  runtime.rs
pandagend/tests/: integration_tests.rs  test_editor_integration.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs
policy/: Cargo.toml
policy/src/: lib.rs
remote_ipc/: Cargo.toml
resources/: Cargo.toml
secure_boot/: Cargo.toml
services_app_store/: Cargo.toml
services_command_palette/: Cargo.toml
services_command_palette/src/: lib.rs
services_device_manager/: Cargo.toml
services_editor_vi/: Cargo.toml
services_editor_vi/src/: commands.rs  editor.rs  io.rs  lib.rs  render.rs  state.rs
services_editor_vi/tests/: integration_tests.rs
services_file_picker/: Cargo.toml
services_file_picker/src/: lib.rs  render.rs
services_focus_manager/: Cargo.toml
services_focus_manager/src/: lib.rs
services_fs_view/: Cargo.toml
services_gui_host/: Cargo.toml
services_input/: Cargo.toml
services_input/src/: lib.rs
services_input_hal_bridge/: Cargo.toml
services_input_hal_bridge/src/: lib.rs
services_job_scheduler/: Cargo.toml
services_job_scheduler/src/: lib.rs
services_logger/: Cargo.toml
services_network/: Cargo.toml
services_network/src/: lib.rs
services_notification/: Cargo.toml
services_notification/src/: lib.rs
services_pipeline_executor/: Cargo.toml
services_pipeline_executor/src/: lib.rs
services_process_manager/: Cargo.toml
services_process_manager/src/: descriptor.rs  lib.rs  lifecycle.rs  manager.rs  process_info.rs
services_registry/: Cargo.toml
services_remote_ui_host/: Cargo.toml
services_remote_ui_host/src/: lib.rs
services_settings/: Cargo.toml
services_storage/: Cargo.toml
services_storage/src/: block_storage.rs  failing_device.rs  journaled_storage.rs  lib.rs  migration.rs  object.rs  permissions.rs  persistent_fs.rs  transaction.rs
services_view_host/: Cargo.toml
services_view_host/src/: lib.rs
services_workspace_manager/: Cargo.toml
services_workspace_manager/src/: boot_profile.rs  command_registry.rs  command_surface.rs  commands.rs  help.rs  keybindings.rs  lib.rs  workspace_status.rs
services_workspace_manager/src/platform/: fake.rs  mod.rs
services_workspace_manager/tests/: integration_tests.rs  runtime_tests.rs
sim_kernel/: Cargo.toml
sim_kernel/src/: address_space.rs  capability_audit.rs  executable.rs  fault_injection.rs  lib.rs  message_queue.rs  page_table_bridge.rs  policy_audit.rs  resource_audit.rs  scheduler.rs  smp.rs  syscall_gate.rs  test_utils.rs  timer.rs  user_task.rs
tests_pipelines/: Cargo.toml
tests_pipelines/src/: lib.rs
tests_pipelines/tests/: keyboard_input_pipeline.rs
tests_resilience/: Cargo.toml
tests_resilience/src/: lib.rs
tests_resilience/tests/: capability_lifecycle.rs  capability_safety.rs  crash_restart.rs  editor_persistence.rs  registry_consistency.rs  resource_enforcement.rs  storage_consistency.rs  test_unified_output_model.rs
text_renderer_host/: Cargo.toml
view_types/: Cargo.toml
workspace_access/: Cargo.toml
(+34 files in other folders)
