[workspace]
resolver = "2"
members = [
    "core_types",
    "ipc",
    "kernel_api",
    "sim_kernel",
    "hal",
    "hal_x86_64",
    "services_registry",
    "services_process_manager",
    "services_logger",
    "services_storage",
    "services_pipeline_executor",
    "services_fs_view",
    "services_input",
    "services_input_hal_bridge",
    "services_focus_manager",
    "services_editor_vi",
    "services_workspace_manager",
    "services_view_host",
    "fs_view",
    "intent_router",
    "pipeline",
    "lifecycle",
    "identity",
    "policy",
    "resources",
    "input_types",
    "view_types",
    "cli_console",
    "tests_resilience",
    "tests_pipelines",
    "contract_tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PandaGen Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core crates
core_types = { path = "core_types" }
ipc = { path = "ipc" }
kernel_api = { path = "kernel_api" }
sim_kernel = { path = "sim_kernel" }
hal = { path = "hal" }
hal_x86_64 = { path = "hal_x86_64" }

# Service crates
services_registry = { path = "services_registry" }
services_process_manager = { path = "services_process_manager" }
services_logger = { path = "services_logger" }
services_storage = { path = "services_storage" }
services_pipeline_executor = { path = "services_pipeline_executor" }
services_fs_view = { path = "services_fs_view" }
fs_view = { path = "fs_view" }
intent_router = { path = "intent_router" }
pipeline = { path = "pipeline" }
lifecycle = { path = "lifecycle" }
identity = { path = "identity" }
policy = { path = "policy" }
resources = { path = "resources" }

# Input system crates
input_types = { path = "input_types" }
services_input = { path = "services_input" }
services_focus_manager = { path = "services_focus_manager" }
services_editor_vi = { path = "services_editor_vi" }
services_workspace_manager = { path = "services_workspace_manager" }

# View system crates
view_types = { path = "view_types" }
services_view_host = { path = "services_view_host" }

# Demo crates
cli_console = { path = "cli_console" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
