[workspace]
resolver = "2"
members = [
    "kernel_bootstrap",
    "core_types",
    "ipc",
    "kernel_api",
    "sim_kernel",
    "hal",
    "hal_x86_64",
    "console_fb",
    "services_registry",
    "services_process_manager",
    "services_logger",
    "services_storage",
    "services_device_manager",
    "services_network",
    "secure_boot",
    "developer_sdk",
    "services_gui_host",
    "remote_ipc",
    "distributed_storage",
    "workspace_access",
    "services_app_store",
    "formal_verification",
    "package_registry",
    "services_pipeline_executor",
    "services_fs_view",
    "services_input",
    "services_input_hal_bridge",
    "services_focus_manager",
    "services_editor_vi",
    "services_workspace_manager",
    "services_view_host",
    "services_remote_ui_host",
    "text_renderer_host",
    "fs_view",
    "packages",
    "intent_router",
    "pipeline",
    "lifecycle",
    "identity",
    "policy",
    "resources",
    "input_types",
    "view_types",
    "editor_core",
    "cli_console",
    "tests_resilience",
    "tests_pipelines",
    "contract_tests",
    "pandagend",
    "xtask", "console_vga",
    "services_command_palette",
    "services_notification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PandaGen Contributors"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
# Core crates
core_types = { path = "core_types" }
ipc = { path = "ipc" }
kernel_api = { path = "kernel_api" }
sim_kernel = { path = "sim_kernel" }
hal = { path = "hal" }
hal_x86_64 = { path = "hal_x86_64" }
console_fb = { path = "console_fb" }
console_vga = { path = "console_vga" }
editor_core = { path = "editor_core" }

# Service crates
services_registry = { path = "services_registry" }
services_process_manager = { path = "services_process_manager" }
services_logger = { path = "services_logger" }
services_storage = { path = "services_storage" }
services_device_manager = { path = "services_device_manager" }
services_network = { path = "services_network" }
secure_boot = { path = "secure_boot" }
developer_sdk = { path = "developer_sdk" }
services_gui_host = { path = "services_gui_host" }
remote_ipc = { path = "remote_ipc" }
distributed_storage = { path = "distributed_storage" }
workspace_access = { path = "workspace_access" }
services_app_store = { path = "services_app_store" }
formal_verification = { path = "formal_verification" }
package_registry = { path = "package_registry" }
services_pipeline_executor = { path = "services_pipeline_executor" }
services_fs_view = { path = "services_fs_view" }
fs_view = { path = "fs_view" }
intent_router = { path = "intent_router" }
pipeline = { path = "pipeline" }
lifecycle = { path = "lifecycle" }
identity = { path = "identity" }
policy = { path = "policy" }
resources = { path = "resources" }
packages = { path = "packages" }
services_command_palette = { path = "services_command_palette" }
services_notification = { path = "services_notification" }

# Input system crates
input_types = { path = "input_types" }
services_input = { path = "services_input" }
services_input_hal_bridge = { path = "services_input_hal_bridge" }
services_focus_manager = { path = "services_focus_manager" }
services_editor_vi = { path = "services_editor_vi" }
services_workspace_manager = { path = "services_workspace_manager" }

# View system crates
view_types = { path = "view_types" }
services_view_host = { path = "services_view_host" }
services_remote_ui_host = { path = "services_remote_ui_host" }
text_renderer_host = { path = "text_renderer_host" }

# Demo crates
cli_console = { path = "cli_console" }

# External dependencies
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
thiserror = { version = "1.0", default-features = false }
tempfile = "3"
sha2 = "0.10"
