[package]
name = "cli_console"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[example]]
name = "fs_demo"
path = "../examples/fs_demo.rs"

[[example]]
name = "settings_demo"
path = "../examples/settings_demo.rs"

[dependencies]
core_types.workspace = true
kernel_api.workspace = true
ipc.workspace = true
sim_kernel.workspace = true
services_registry.workspace = true
services_storage.workspace = true
services_fs_view.workspace = true
fs_view.workspace = true
input_types.workspace = true
services_input.workspace = true
services_focus_manager.workspace = true
services_settings.workspace = true
services_workspace_manager.workspace = true
identity.workspace = true
hal.workspace = true
