[package]
name = "console_fb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hal = { workspace = true }
services_editor_vi = { workspace = true, optional = true }

[dev-dependencies]
services_editor_vi = { workspace = true }

[features]
default = ["editor-integration"]
editor-integration = ["services_editor_vi"]
