[package]
name = "console_vga"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# No external runtime dependencies - pure Rust implementation

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
