[package]
name = "developer_sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ipc = { workspace = true }
kernel_api = { workspace = true }
core_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
