[package]
name = "distributed_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
services_storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["serde"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }

