[package]
name = "editor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
# For testing with std
sha2 = { workspace = true }

[lib]
name = "editor_core"
path = "src/lib.rs"
