[package]
name = "kernel_bootstrap"
version = "0.1.0"
edition = "2021"

[lib]
name = "kernel_bootstrap_lib"
path = "src/lib.rs"

[dependencies]
editor_core = { path = "../editor_core", default-features = false }
limine = { version = "0.5.0", optional = true }
console_vga = { path = "../console_vga", default-features = false, optional = true }
services_storage = { path = "../services_storage", default-features = false, features = ["alloc"] }
services_workspace_manager = { path = "../services_workspace_manager", default-features = true }
input_types = { workspace = true }
view_types = { workspace = true }
identity = { workspace = true }
hal = { path = "../hal", features = ["alloc"] }
hal_x86_64 = { path = "../hal_x86_64" }
serde = { workspace = true, default-features = false, features = ["alloc"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
services_command_palette = { path = "../services_command_palette", default-features = false }
services_notification = { path = "../services_notification", default-features = false }

[features]
default = ["console_vga", "limine"]

[[bin]]
name = "kernel_bootstrap"
path = "src/main.rs"
required-features = ["console_vga", "limine"]
