[package]
name = "pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
lifecycle = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

[target.'cfg(target_os = "none")'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["serde"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
