[package]
name = "policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
identity = { workspace = true }
pipeline = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
