[package]
name = "services_network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
identity = { workspace = true }
kernel_api = { workspace = true }
resources = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["serde"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
sim_kernel = { workspace = true }

[dev-dependencies]
