[package]
name = "services_notification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
ipc = { workspace = true }
view_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["serde"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }

[dev-dependencies]
