[package]
name = "services_pipeline_executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pipeline = { workspace = true }
core_types = { workspace = true }
kernel_api = { workspace = true }
lifecycle = { workspace = true }
ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
