[package]
name = "services_process_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types.workspace = true
kernel_api.workspace = true
ipc.workspace = true
uuid.workspace = true
serde.workspace = true
identity.workspace = true
thiserror.workspace = true

[dev-dependencies]
sim_kernel.workspace = true
