[package]
name = "services_remote_ui_host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
ipc = { workspace = true }
kernel_api = { workspace = true }
services_workspace_manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
