[package]
name = "services_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types.workspace = true
identity.workspace = true
kernel_api.workspace = true
ipc.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sim_kernel.workspace = true
hal = { path = "../hal", features = ["alloc"] }
crc32fast = "1.4"
