[package]
name = "services_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
core_types.workspace = true
identity.workspace = true
kernel_api.workspace = true
ipc.workspace = true
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
hal = { path = "../hal", features = ["alloc"] }
crc32fast = { version = "1.4", default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
uuid = { version = "1.0", default-features = false, features = ["serde"] }

[target.'cfg(not(target_os = "none"))'.dependencies]
sim_kernel.workspace = true
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
