[package]
name = "services_view_host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
ipc = { workspace = true }
view_types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
