[package]
name = "services_workspace_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core_types = { workspace = true }
identity = { workspace = true }
ipc = { workspace = true }
kernel_api = { workspace = true }
lifecycle = { workspace = true }
policy = { workspace = true }
resources = { workspace = true }
packages = { workspace = true }
services_focus_manager = { workspace = true }
input_types = { workspace = true }
services_input = { workspace = true }
view_types = { workspace = true }
services_view_host = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sim_kernel = { workspace = true }
