[package]
name = "services_workspace_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
core_types = { workspace = true }
identity = { workspace = true }
ipc = { workspace = true }
kernel_api = { workspace = true }
lifecycle = { workspace = true }
policy = { workspace = true }
resources = { workspace = true }
packages = { workspace = true }
services_focus_manager = { workspace = true }
services_editor_vi = { workspace = true }
services_file_picker = { workspace = true }
services_command_palette = { workspace = true }
services_settings = { workspace = true }
input_types = { workspace = true }
services_input = { workspace = true }
view_types = { workspace = true }
services_view_host = { workspace = true }
services_fs_view = { workspace = true }
services_storage = { workspace = true }
fs_view = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# For no_std HashMap support
[target.'cfg(not(feature = "std"))'.dependencies]
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more", "allocator-api2"] }

[dev-dependencies]
sim_kernel = { workspace = true }
