[package]
name = "sim_kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kernel_api.workspace = true
core_types.workspace = true
ipc.workspace = true
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
identity.workspace = true
policy.workspace = true
resources.workspace = true
hal.workspace = true

[dev-dependencies]
input_types.workspace = true
services_input.workspace = true
