[package]
name = "tests_pipelines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pipeline = { workspace = true }
services_pipeline_executor = { workspace = true }
core_types = { workspace = true }
kernel_api = { workspace = true }
lifecycle = { workspace = true }
sim_kernel = { workspace = true }
ipc = { workspace = true }
services_storage = { workspace = true }
policy = { workspace = true }
identity = { workspace = true }
hal = { workspace = true }
input_types = { workspace = true }
services_input = { workspace = true }
services_focus_manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
